--- a/zuul-server/pom.xml
+++ b/zuul-server/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.pulsar</groupId>
+	<groupId>com.ocean</groupId>
 	<artifactId>zuul-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -24,12 +24,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.pulsar</groupId>
-			<artifactId>common-package</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
