--- a/common-package/pom.xml
+++ b/common-package/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <!--   <parent>
            <artifactId>b91proj</artifactId>
-           <groupId>com.pulsar</groupId>
+           <groupId>com.ocean</groupId>
            <version>1.0.0</version>
        </parent>-->
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.pulsar</groupId>
+    <groupId>com.ocean</groupId>
     <artifactId>common-package</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
