--- a/redis-server/src/main/resources/bootstrap.yml
+++ b/redis-server/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
     application:
       name: redis-server
     datasource:
-      name: largeuserdb
+      name: homemonitor
     profiles:
       active: test
     jackson:
