--- a/manager-ribbon-server/src/main/resources/bootstrap.yml
+++ b/manager-ribbon-server/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: manager-ribbon-server
   datasource:
-    name: largeuserdb
+    name: homemonitor
   profiles:
     active: test
   jackson:
